Some general corrections

--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -58,6 +58,7 @@ span {
   border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
+  box-shadow: 6px 6px 12px 12px #00000029;
 }
 .search-header {
   z-index: 1000;
@@ -109,6 +110,7 @@ form {
   border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
+  box-shadow: 6px 6px 12px 12px #00000029;
 }
 .ticket-header {
   z-index: 1000;
@@ -152,12 +154,12 @@ button.ticket {
   border: none;
   border-radius: 15px;
   cursor: pointer;
-  transition-property: opacity;
+  transition-property: scale;
   transition-duration: 0.5s;
-  opacity: 1;
+  scale: 1;
 }
 button.ticket:hover {
-  opacity: 0.65;
+  scale: 1.1;
 }
 #ticket-box {
   display: none;
@@ -187,6 +189,7 @@ button.ticket:hover {
   border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
+  box-shadow: 6px 6px 12px 12px #00000029;
 }
 .profile-header {
   z-index: 1000;
@@ -227,12 +230,12 @@ button.profile {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
-  transition-property: opacity;
+  transition-property: scale;
   transition-duration: 0.5s;
-  opacity: 1;
+  scale: 1;
 }
 button.profile:hover {
-  opacity: 0.65;
+  scale: 1.1;
 }
 #profile-box {
   display: none;
@@ -408,8 +411,8 @@ figure.arrow-down {
   margin: 32px auto;
 }
 img.arrow-down {
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
 }
 figure.arrow-left-right {
   width: 90px;
@@ -567,7 +570,7 @@ p.visit {
   background-size: cover;
   background-repeat: no-repeat;
   height: 300px;
-  margin-top: 32px;
+  margin-top: 64px;
   margin-bottom: 0;
 }
 .blur {
@@ -591,7 +594,7 @@ section.newsletter {
   display: block;
   font-family: var(--neue-haas);
   font-size: 0.875rem;
-  font-weight: bold;
+  font-weight: 800;
   text-transform: uppercase;
   text-align: left;
   min-width: 328px;
@@ -801,12 +804,12 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 300px;
+    width: 400px;
     margin-left: 32px;
     margin-top: 16px;
   }
   .logo img {
-    width: 300px;
+    width: 400px;
   }
   .header-wrapper {
     width: 90%;
@@ -861,14 +864,15 @@ h6 {
   }
   figure.card-large {
     scale: 1;
-    margin-top: 16px;
+    margin-top: 32px;
+    margin-bottom: 32px;
     /* margin-bottom: 16px;
     margin-bottom: 64px; */
   }
   figure.arrow-down {
     width: 75px;
     height: 75px;
-    margin: 32px auto;
+    margin: 32px auto 0 auto;
   }
   section.newsletter {
     width: 50%;
@@ -930,7 +934,7 @@ h6 {
 --------------------*/
   .logo {
     width: 500px;
-    margin-left: 128px;
+    margin-left: 5%;
   }
   .logo img {
     width: 500px;
@@ -1008,6 +1012,7 @@ border-right: 2px solid transparent; */
     border-right: 2px solid var(--dark-purple); */
     border-bottom: 8px solid var(--dark-purple);
     border-radius: 0 0 70px 0;
+    box-shadow: 6px 6px 12px 12px #00000029;
     visibility: hidden;
     opacity: 0;
     display: none;
@@ -1114,7 +1119,7 @@ border-right: 2px solid transparent; */
 --------------------*/
   .newsletter-wrapper {
     width: 90%;
-    margin: 64px auto 32px auto;
+    margin: 128px auto 32px auto;
     border-radius: 0 0 50px 50px;
   }
   section.newsletter {
@@ -1127,7 +1132,6 @@ border-right: 2px solid transparent; */
   }
   .newsletter p {
     font-size: 1.25rem;
-    text-transform: uppercase;
     margin-top: 64px;
   }
   form.newsletter {
