--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -55,6 +55,7 @@ a {
   border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
+  box-shadow: 6px 6px 12px 12px #00000029;
 }
 .search-header {
   z-index: 1000;
@@ -106,6 +107,7 @@ form {
   border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
+  box-shadow: 6px 6px 12px 12px #00000029;
 }
 .ticket-header {
   z-index: 1000;
@@ -149,12 +151,12 @@ button.ticket {
   border: none;
   border-radius: 15px;
   cursor: pointer;
-  transition-property: opacity;
+  transition-property: scale;
   transition-duration: 0.5s;
-  opacity: 1;
+  scale: 1;
 }
 button.ticket:hover {
-  opacity: 0.65;
+  scale: 1.1;
 }
 #ticket-box {
   display: none;
@@ -184,6 +186,7 @@ button.ticket:hover {
   border-right: 2px solid var(--dark-purple); */
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 70px 0 70px 0;
+  box-shadow: 6px 6px 12px 12px #00000029;
 }
 .profile-header {
   z-index: 1000;
@@ -224,12 +227,12 @@ button.profile {
   margin: 16px auto 50px auto;
   border: none;
   border-radius: 15px;
-  transition-property: opacity;
+  transition-property: scale;
   transition-duration: 0.5s;
-  opacity: 1;
+  scale: 1;
 }
 button.profile:hover {
-  opacity: 0.65;
+  scale: 1.1;
 }
 #profile-box {
   display: none;
@@ -393,9 +396,6 @@ div.item-1 {
   color: #fff;
   /* border-radius: 15px 0 0 0; */
 }
-#hours {
-  background-color: var(--dark-purple);
-}
 div.vision p {
   width: 90%;
   margin: 0 auto;
@@ -421,14 +421,14 @@ img.large-screen {
   color: #fff;
   font-size: 1.125rem;
   text-align: center;
-  border-radius: 0 25px;
+  border-radius: 0 50px;
   display: flex;
   flex-direction: column;
 }
 .get-in-touch > p {
   font-family: var(--proxima);
   font-weight: bold;
-  text-transform: capitalize;
+  text-transform: uppercase;
   margin: 16px 0;
 }
 p.button {
@@ -517,7 +517,7 @@ p.tourguides {
   background-size: cover;
   background-repeat: no-repeat;
   height: 300px;
-  margin-top: 32px;
+  margin-top: 64px;
   margin-bottom: 0;
 }
 .blur {
@@ -541,7 +541,7 @@ section.newsletter {
   display: block;
   font-family: var(--neue-haas);
   font-size: 0.875rem;
-  font-weight: bold;
+  font-weight: 800;
   text-transform: uppercase;
   text-align: left;
   min-width: 328px;
@@ -705,12 +705,12 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 300px;
+    width: 400px;
     margin-left: 32px;
     margin-top: 16px;
   }
   .logo img {
-    width: 300px;
+    width: 400px;
   }
   .header-wrapper {
     width: 90%;
@@ -850,7 +850,7 @@ h6 {
 --------------------*/
   .logo {
     width: 500px;
-    margin-left: 128px;
+    margin-left: 5%;
   }
   .logo img {
     width: 500px;
@@ -928,6 +928,7 @@ border-right: 2px solid transparent; */
     border-right: 2px solid var(--dark-purple); */
     border-bottom: 8px solid var(--dark-purple);
     border-radius: 0 0 70px 0;
+    box-shadow: 6px 6px 12px 12px #00000029;
     visibility: hidden;
     opacity: 0;
     display: none;
@@ -986,7 +987,7 @@ border-right: 2px solid transparent; */
     padding-top: 12px;
   }
   .get-in-touch p {
-    font-size: 1.5rem;
+    font-size: 1.35rem;
   }
   h4 {
     width: 90%;
@@ -1013,7 +1014,7 @@ border-right: 2px solid transparent; */
 --------------------*/
   .newsletter-wrapper {
     width: 90%;
-    margin: 64px auto 32px auto;
+    margin: 128px auto 32px auto;
     border-radius: 0 0 50px 50px;
   }
   section.newsletter {
@@ -1026,7 +1027,6 @@ border-right: 2px solid transparent; */
   }
   .newsletter p {
     font-size: 1.25rem;
-    text-transform: uppercase;
     margin-top: 64px;
   }
   form.newsletter {
