--- a/styles/explore.css
+++ b/styles/explore.css
@@ -672,11 +672,7 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 350px;
     margin-top: 16px;
-  }
-  .logo img {
-    width: 350px;
   }
   .header-wrapper {
     width: 90%;
@@ -773,6 +769,14 @@ h6 {
   }
 }
 @media only screen and (min-width: 992px) {
+  /* Header
+--------------------*/
+  .logo {
+    width: 350px;
+  }
+  .logo img {
+    width: 350px;
+  }
   /* Main
 --------------------*/
   section.newsletter {
