--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -615,11 +615,7 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 350px;
     margin-top: 16px;
-  }
-  .logo img {
-    width: 350px;
   }
   .header-wrapper {
     width: 90%;
@@ -693,6 +689,14 @@ h6 {
   }
 }
 @media only screen and (min-width: 992px) {
+  /* Header
+--------------------*/
+  .logo {
+    width: 350px;
+  }
+  .logo img {
+    width: 350px;
+  }
   /* Main
 --------------------*/
   section.newsletter {
