--- a/styles/home.css
+++ b/styles/home.css
@@ -1110,11 +1110,7 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 350px;
     margin-top: 16px;
-  }
-  .logo img {
-    width: 350px;
   }
   .header-wrapper {
     width: 90%;
@@ -1247,6 +1243,14 @@ h6 {
   }
 }
 @media only screen and (min-width: 992px) {
+  /* Header
+--------------------*/
+  .logo {
+    width: 350px;
+  }
+  .logo img {
+    width: 350px;
+  }
   /* Main
 --------------------*/
   .main-content {
