--- a/styles/visit.css
+++ b/styles/visit.css
@@ -670,11 +670,7 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 350px;
     margin-top: 16px;
-  }
-  .logo img {
-    width: 350px;
   }
   .header-wrapper {
     width: 90%;
@@ -800,6 +796,12 @@ h6 {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
+  .logo {
+    width: 350px;
+  }
+  .logo img {
+    width: 350px;
+  }
   section.info {
     flex-direction: row;
     gap: 16px;
