--- a/styles/contact.css
+++ b/styles/contact.css
@@ -648,11 +648,7 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 350px;
     margin-top: 16px;
-  }
-  .logo img {
-    width: 350px;
   }
   .header-wrapper {
     width: 90%;
@@ -726,6 +722,14 @@ h6 {
   }
 }
 @media only screen and (min-width: 992px) {
+  /* Header
+--------------------*/
+  .logo {
+    width: 350px;
+  }
+  .logo img {
+    width: 350px;
+  }
   /* Main
 --------------------*/
   .main-wrapper {
