--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -804,11 +804,7 @@ h6 {
   /* Header
 --------------------*/
   .logo {
-    width: 350px;
     margin-top: 16px;
-  }
-  .logo img {
-    width: 350px;
   }
   .header-wrapper {
     width: 90%;
@@ -907,6 +903,14 @@ h6 {
   }
 }
 @media only screen and (min-width: 992px) {
+  /* Header
+--------------------*/
+  .logo {
+    width: 350px;
+  }
+  .logo img {
+    width: 350px;
+  }
   /* Main
 --------------------*/
   .image-wrapper {
