--- a/styles/visit.css
+++ b/styles/visit.css
@@ -371,11 +371,20 @@ h1 {
   font-size: 1.5rem;
   font-weight: bold;
   text-transform: uppercase;
+  text-align: left;
   background-color: var(--dark-purple);
   color: #fff;
-  margin: 32px 5% 32px 0;
-  padding: 12px 32px;
+  padding: 12px 5%;
+  margin: 32px 5% 16px 0;
   border-radius: 0 0 50px 0;
+}
+h4 {
+  font-size: 1.25rem;
+  font-weight: 800;
+  font-family: var(--sofia);
+  color: var(--dark-purple);
+  margin: 0 5% 32px 5%;
+  text-transform: capitalize;
 }
 h2,
 h3 {
@@ -650,7 +659,9 @@ h6 {
 --------------------*/
   h1 {
     font-size: 1.875rem;
-    text-align: center;
+  }
+  h4 {
+    font-size: 1.5rem;
   }
   section {
     width: 70%;
@@ -932,6 +943,9 @@ border-right: 2px solid transparent; */
   /* Main
 --------------------*/
   h1.mobile {
+    display: none;
+  }
+  h4 {
     display: none;
   }
   h1.large-screen {
