--- a/styles/explore.css
+++ b/styles/explore.css
@@ -387,10 +387,11 @@ h1 {
   font-size: 1.5rem;
   font-weight: bold;
   text-transform: uppercase;
+  text-align: left;
   background-color: var(--dark-purple);
   color: #fff;
-  margin: 32px 5% 0 0;
-  padding: 12px 32px;
+  padding: 12px 5%;
+  margin: 32px 5% 16px 0;
   border-radius: 0 0 50px 0;
 }
 h2,
@@ -401,6 +402,7 @@ h3 {
 }
 h4 {
   font-family: var(--proxima);
+  text-transform: uppercase;
   font-size: 1.25rem;
   margin-top: 16px;
   margin-bottom: 0;
@@ -915,7 +917,6 @@ border-right: 2px solid transparent; */
   }
   h4 {
     font-size: 1.5rem;
-    text-transform: uppercase;
     margin-top: 24px;
   }
   h5 {
