--- a/styles/explore.css
+++ b/styles/explore.css
@@ -364,13 +364,11 @@ section.teachers {
 }
 div.blue {
   background-color: var(--blue);
+  /* font-family: var(--sofia); */
+  font-size: 1.125rem;
   color: #fff;
 }
-#intro {
-  font-family: var(--sofia);
-  font-weight: bold;
-  /* font-style: italic; */
-}
+/* font-style: italic; */
 .margins {
   width: 100%;
   /* min-width: 400px; */
@@ -391,8 +389,8 @@ h1 {
   background-color: var(--dark-purple);
   color: #fff;
   padding: 12px 5%;
-  margin: 32px 5% 16px 0;
-  border-radius: 0 0 50px 0;
+  margin: 8px 0 16px 0;
+  /* border-radius: 0 0 50px 0; */
 }
 h2,
 h3 {
@@ -447,7 +445,7 @@ figure {
 .get-in-touch {
   background-color: #7c68a6;
   color: #fff;
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   text-align: center;
   border-radius: 0 50px;
   display: flex;
@@ -471,7 +469,7 @@ p.button {
   padding: 8px 32px;
   margin-top: 0;
   margin-bottom: 16px;
-  border-bottom: 2px solid #fff;
+  border-bottom: 3px solid #fff;
   border-right: 2px solid #fff;
   transition-property: scale;
   transition-duration: 0.5s;
@@ -493,7 +491,7 @@ p.button:hover {
   margin-bottom: 0;
 }
 .blur {
-  background-color: #ffffffa6;
+  background-color: #ffffffbf;
   margin-bottom: 0;
   height: 150px;
   position: relative;
@@ -648,10 +646,10 @@ h6 {
   }
   /* Main
 --------------------*/
-  h1 {
+  /* h1 {
     font-size: 1.875rem;
     text-align: center;
-  }
+  } */
   #item-3,
   #item-6 {
     min-height: 400px;
@@ -713,9 +711,9 @@ h6 {
   }
   /* Main
 --------------------*/
-  h1 {
+  /* h1 {
     font-size: 2.25rem;
-  }
+  } */
   #item-1,
   #item-2,
   #item-4,
@@ -932,6 +930,9 @@ border-right: 2px solid transparent; */
   }
   .margins img {
     height: 480px;
+  }
+  div.blue {
+    font-size: 1.25rem;
   }
   #item-3 {
     background-image: url(../images/kids-cartoon_vertical.jpg);
