--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,7 +7,7 @@
   --dark-green: #034638;
   --blue: #007298;
   --orange: #dc4405;
-  --teal: #487a7b;
+  --teal: #3d6a6b;
   --light-grey: #f2f2f2;
   --white: #ffffff;
   --sofia: "sofia pro";
