--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,6 +13,6 @@
   --sofia: "sofia pro", "helvetica", "arial", "sans-serif";
   --proxima: "proxima nova", "open sans", "corbel", "arial", "sans-serif";
   --proxima-soft: "proxima soft", "helvetica", "arial", "sans-serif";
-  --neue-haas: "neue haas unica W1G", "helvetica", "arial", "sans-serif";
+  --neue-haas: "open sans", "helvetica", "arial", "sans-serif";
   --center-align: 0 auto 0 auto;
 }
